--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,12 @@
 version: "2"
 services:
   devbox:
-    build: .
-    environment:
-      - $DOCKER_CERT_PATH:/certs
+    build: .      
     ports:
       - "2222:22"
+    environment:
+      DOCKER_CERT_PATH: /certs
+      DOCKER_TLS_VERIFY: 1
     volumes:
       - $HOME/code/:/home/lukenimtz/code/
+      - $DOCKER_CERT_PATH:/certs
